bundled_metadata/force-app/main/default/objects/Pricing_Configuration__c/Pricing_Configuration__c.object-meta.xml
<CustomObject>
    <label>Pricing Configuration</label>
    <nameField>
        <displayFormat>PrConfig-{0000000}</displayFormat>
        <label>Pricing Configuration No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>