bundled_metadata/force-app/main/default/objects/Pricing_Configuration__c/fields/Container__c.field-meta.xml
<CustomField>
    <fullName>Container__c</fullName>
    <label>Container</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Container</valueSetName>
    </valueSet>
</CustomField>