bundled_metadata/force-app/main/default/objects/Pricing_Configuration__c/fields/KeyAccountId__c.field-meta.xml
<CustomField>
    <fullName>KeyAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Key Account (Account record) this pricing configuration applies to. When populated, the batch creates Customer Pricing records for all stores that share this Key Account. Mutually exclusive with Price Group Segment Snacks/Beverages.</description>
    <label>Key Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Key Account</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pricing Configurations</relationshipLabel>
    <relationshipName>Pricing_Configurations_Key_Account</relationshipName>
    <type>Lookup</type>
</CustomField>