bundled_metadata/force-app/main/default/objects/Pricing_Configuration__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manufacturer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.Product_Hierarchy_Level__c</field>
            <operation>equals</operation>
            <value>Manufacturer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Pricing Configurations (Manufacturer)</relationshipLabel>
    <relationshipName>Pricing_Configurations1</relationshipName>
    <type>Lookup</type>
</CustomField>