bundled_metadata/force-app/main/default/objects/Pricing_Configuration__c/fields/Price_Group_Segment_Drinks__c.field-meta.xml
<CustomField>
    <fullName>Price_Group_Segment_Drinks__c</fullName>
    <label>Price Group Segment Beverages</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Price_Group</valueSetName>
    </valueSet>
</CustomField>