bundled_metadata/force-app/main/default/objects/Pricing_Configuration__c/fields/Price_Group_Segment_Key_Account__c.field-meta.xml
<CustomField>
    <fullName>Price_Group_Segment_Key_Account__c</fullName>
    <description>Key Account customer hierarchy attribute for group pricing. When populated, pricing rules are applied to all stores belonging to this Key Account. Only one customer attribute (Snacks, Beverages, or Key Account) may be selected per pricing configuration.</description>
    <label>Price Group Segment Key Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BRP</fullName>
            </value>
            <value>
                <fullName>SPAR</fullName>
            </value>
            <value>
                <fullName>Carrefour</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>