bundled_metadata/force-app/main/default/objects/Pricing_Configuration__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Line</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.Product_Hierarchy_Level__c</field>
            <operation>equals</operation>
            <value>Product Line</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Pricing Configurations</relationshipLabel>
    <relationshipName>Pricing_Configurations_del</relationshipName>
    <type>Lookup</type>
</CustomField>