bundled_metadata/force-app/main/default/objects/Pricing_Configuration__c/fields/Product_Subbrand__c.field-meta.xml
<CustomField>
    <fullName>Product_Subbrand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Subbrand</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.Product_Hierarchy_Level__c</field>
            <operation>equals</operation>
            <value>Product Sub-brand</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Pricing Configurations (Product Subbrand)</relationshipLabel>
    <relationshipName>Pricing_Configurations3_del</relationshipName>
    <type>Lookup</type>
</CustomField>