bundled_metadata/force-app/main/default/objects/Pricing_Configuration__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <label>Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Size</valueSetName>
    </valueSet>
</CustomField>