bundled_metadata/force-app/main/default/objects/Pricing_Configuration__c/validationRules/VR_Only_One_Price_Group_Segment.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Only_One_Price_Group_Segment</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT( ISPICKVAL( Price_Group_Segment_Snacks__c , &apos;&apos; ) ),
    NOT( ISPICKVAL( Price_Group_Segment_Drinks__c , &apos;&apos; ) )
)</errorConditionFormula>
    <errorMessage>Only one of &quot;Price Group Segment Snacks&quot; or &quot;Price Group Segment Beverages&quot; may be populated.</errorMessage>
</ValidationRule>