bundled_metadata/force-app/main/default/objects/Pricing_Configuration__c/validationRules/VR_Valid_To_After_Valid_From.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Valid_To_After_Valid_From</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Valid_From__c)),
    NOT(ISBLANK(Valid_To__c)),
    Valid_To__c &lt;= Valid_From__c
)</errorConditionFormula>
    <errorMessage>Valid To date must be after the Valid From date.</errorMessage>
</ValidationRule>